fixed minor error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
       <div class="row">
   {% assign recent_section = site.posts %}
   {% for post in recent_section limit: 6 %}
-  {% include cardhorizental.html %}
+  {% include cardHorizental.html %}
   {%endfor%}
       </div>
       <div class="card-deck mt-4">
