--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+test
   {% assign top_section = site.posts | where: 'featured', 1 %}
   {% for post in top_section limit: 1 %}
   {% include sectionHomeTop.html %}
