clean some stuff

--- a/post.html
+++ b/post.html
@@ -3,4 +3,8 @@ layout: default
 title: پست جدید
 jsFile: edit.js
 ---
-{% include edit.html %}
+<link rel="stylesheet" href="/assets/vendors/pdp/persian-datepicker.css"/>
+<script src="/assets/vendors/pdp/persian.date.js"></script>
+<script src="/assets/vendors/pdp/persian-datepicker.js"></script>
+
+{% include post-form.html %}
