--- a/dashboard.html
+++ b/dashboard.html
@@ -1,8 +1,13 @@
 ---
 layout: default
+title: محیط کاربری
 permalink: /dashboard/
 jsFile: dashboard.js
 ---
+<script type="module">
+import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
+</script>
+
 <section class="guest">
   <div class="container my-5">
     <div class="row">
@@ -19,7 +24,7 @@ jsFile: dashboard.js
   <div class="container">
 
           <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-black rounded-0 box-shadow">
-            <img class="mr-3" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
+            <img class="user-photo mr-3 img-thumbnail bg-dark img-fluid" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
             <div class="lh-100">
               <h6 class="mb-0 text-white lh-100 user-fullname"></h6>
               <small class="user-title"></small>
@@ -33,7 +38,7 @@ jsFile: dashboard.js
       <div class="col-xl-3 col-sm-6 col-12">
         <div class="card">
           <div class="card-content">
-            <a class="link-light-box" href="/newpost/">
+            <a class="link-light-box" href="/user/?id=me">
             <div class="card-body">
               <div class="media d-flex">
                 <div class="media-body text-left">
@@ -51,11 +56,11 @@ jsFile: dashboard.js
       <div class="col-xl-3 col-sm-6 col-12">
         <div class="card">
           <div class="card-content">
-            <a class="link-light-box" href="/newpost/">
+            <a class="link-light-box" href="/post/">
             <div class="card-body">
               <div class="media d-flex">
                 <div class="media-body text-left">
-                  <h4>مطلب جدید</h4>
+                  <h4>ارسال مطلب</h4>
                 </div>
                 <div class="align-self-center">
                   <i class="far fa-file-alt fa-3x float-right"></i>
@@ -66,10 +71,10 @@ jsFile: dashboard.js
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-sm-6 col-12 reviewer admin">
+      <div class="col-xl-3 col-sm-6 col-12 reviewer admin" style="display:none;">
         <div class="card">
           <div class="card-content">
-            <a class="link-light-box" href="/newpost/">
+            <a class="link-light-box" href="/review/">
             <div class="card-body">
               <div class="media d-flex">
                 <div class="media-body text-left">
@@ -84,10 +89,10 @@ jsFile: dashboard.js
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-sm-6 col-12 admin">
+      <div class="col-xl-3 col-sm-6 col-12 admin" style="display:none;">
         <div class="card">
           <div class="card-content">
-            <a class="link-light-box" href="/newpost/">
+            <a class="link-light-box" href="/users/">
             <div class="card-body">
               <div class="media d-flex">
                 <div class="media-body text-left">
@@ -108,10 +113,13 @@ jsFile: dashboard.js
 </section>
 <section class="user">
   <div class="container">
-    <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
-    <div class="my-3 p-3 bg-white rounded box-shadow">
+    <h3 class="mt-3 mb-0 text-center">آخرین مطالب ارسالی من</h3>
+    <div class="mb-3 p-3 box-shadow">
       <div id="myRecentPost" class="table-responsive">
-      <table id="myRecentPostTable" class="table">
+        <div id="alertRecentPost" class="alert alert-warning text-center">
+          مطلبی وجود ندارد.
+        </div>
+      <table id="myRecentPostTable" class="table" style="display:none;">
         <thead>
           <tr>
             <th scope="col">عنوان</th>
@@ -121,55 +129,36 @@ jsFile: dashboard.js
             <th scope="col">اقدام</th>
           </tr>
         </thead>
-        <tbody id="myRecentPostList">
+        <tbody id="myRecentPostList" class="git">
         </tbody>
         <tfoot>
         </tfoot>
       </table>
       </div>
-      <small class="d-block text-right mt-3">
-        <a href="#">All updates</a>
-      </small>
     </div>
-
-    <div class="my-3 p-3 bg-white rounded box-shadow">
-      <h6 class="border-bottom border-gray pb-2 mb-0">Suggestions</h6>
-      <div class="media text-muted pt-3">
-        <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1789aaa5935%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1789aaa5935%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2212.166666746139526%22%20y%3D%2216.9%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-        <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-          <div class="d-flex justify-content-between align-items-center w-100">
-            <strong class="text-gray-dark">Full Name</strong>
-            <a href="#">Follow</a>
-          </div>
-          <span class="d-block">@username</span>
-        </div>
-      </div>
-      <div class="media text-muted pt-3">
-        <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1789aaa5935%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1789aaa5935%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2212.166666746139526%22%20y%3D%2216.9%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-        <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-          <div class="d-flex justify-content-between align-items-center w-100">
-            <strong class="text-gray-dark">Full Name</strong>
-            <a href="#">Follow</a>
-          </div>
-          <span class="d-block">@username</span>
-        </div>
-      </div>
-      <div class="media text-muted pt-3">
-        <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1789aaa5936%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1789aaa5936%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2212.166666746139526%22%20y%3D%2216.9%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-        <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-          <div class="d-flex justify-content-between align-items-center w-100">
-            <strong class="text-gray-dark">Full Name</strong>
-            <a href="#">Follow</a>
-          </div>
-          <span class="d-block">@username</span>
-        </div>
-      </div>
-      <small class="d-block text-right mt-3">
-        <a href="#">All suggestions</a>
-      </small>
-    </div>
-
   </div>
 </section>
-<script type="text/javascript">
-</script>
+<section class="user">
+  <div class="container">
+    <h3 class="mt-3 mb-0 text-center">آخرین مطالب منتشر شده من</h3>
+    <div class="mb-3 p-3 box-shadow">
+      <div id="myPublishedPosts" class="table-responsive">
+        <div id="alertPublishedPosts" class="alert alert-warning text-center">
+          مطلبی وجود ندارد.
+        </div>
+      <table id="myPublishedPostsTable" class="table" style="display:none;">
+        <thead>
+          <tr>
+            <th scope="col">عنوان</th>
+            <th scope="col">تاریخ انتشار</th>
+          </tr>
+        </thead>
+        <tbody id="myPublishedPostsList">
+        </tbody>
+        <tfoot>
+        </tfoot>
+      </table>
+      </div>
+    </div>
+  </div>
+</section>
