--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 permalink: /login/
+jsFile: login.js
 ---
 <div id="login" class="container text-center">
       <form class="form-signin">
@@ -15,32 +16,10 @@ permalink: /login/
           </label>
         </div>
         <button class="btn btn-lg btn-dark btn-block" type="submit">ورود</button>
+        <div id="alertLogin" class="alert alert-danger" role="alert" style="display:none;">
+          خطا در ورود به سایت. مجدداً تلاش کنید.
+        </div>
+
       </form>
 
 </div>
-<script type="text/javascript">
-  $('.form-signin').submit(function(){
-  event.preventDefault();
-  var user = $('#inputUsername').val();
-  var pass = $('#inputPassword').val();
-  fetch('https://alitayebi.com/asmaneh/cm/api/collections/get/authors', {
-      method: 'post',
-      headers: { 'Content-Type': 'application/json','Authorization': 'Bearer 38211f8b09e9e58ec27947f1812d73' },
-      body: JSON.stringify({
-          filter: {username: user, password: pass}
-      })
-    })
-      .then(res=>res.json())
-      .then(data => obj = data)
-      .then(res => setUserCookie(obj));
-  })
-  function setUserCookie(object) {
-    var currentUser = [];
-    if ($('input:checkbox[name="remmermberMe"]').is(':checked')) {
-      localStorage.setItem('currentUser', JSON.stringify(object.entries[0]) )
-    } else {
-      sessionStorage.setItem('currentUser', JSON.stringify(object.entries[0]))
-    };
-  }
-
-</script>
