--- a/user.html
+++ b/user.html
@@ -72,10 +72,10 @@ jsFile: user.js
         </div>
       </div>
       <div class="row mb-2">
-        <div class="col-12">
+        <div class="col-12 git">
             <label for="userPic">عکس پروفایل</label>
             <input type="file" class="uploadImg" id="userPic" name="myFile">
-            <a href="javascript:void(0)" class="upload uploadImg btn btn-secondary">بارگزاری</a>
+            <a href="javascript:void(0)" id="authorImg" class="uploadGit upload uploadImg btn btn-secondary" data-commit="upload post author image" data-path="assets/img/authors/" data-name="authorSlug">بارگذاری</a>
             <a href="" id="imgPrv" class="uploadedImg btn btn-success" target="_blank" style="display: none;">نمایش</a>
             <a href="javascript:void(0)" id="imgDel" class="uploadedImg btn btn-danger" style="display: none;">حذف</a>
           </div>
