--- a/users.html
+++ b/users.html
@@ -26,7 +26,7 @@ jsFile: users.js
               <th scope="col">اقدام</th>
             </tr>
           </thead>
-          <tbody id="usersTableList">
+          <tbody id="usersTableList" class="git">
           </tbody>
           <tfoot>
           </tfoot>
