--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,7 @@ layout: default
 title: محیط کاربری
 permalink: /dashboard/
 jsFile: dashboard.js
+access: users
 ---
 <script type="module">
 import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
