--- a/post.html
+++ b/post.html
@@ -2,6 +2,7 @@
 layout: default
 title: پست جدید
 jsFile: edit.js
+access: users
 ---
 <link rel="stylesheet" href="/assets/vendors/pdp/persian-datepicker.css"/>
 <script src="/assets/vendors/pdp/persian.date.js"></script>
