--- a/user.html
+++ b/user.html
@@ -2,6 +2,7 @@
 layout: default
 title: ویرایش اطلاعات کاربری
 jsFile: user.js
+access: users
 ---
 <section class="pt-5">
   <div class="container">
