--- a/users.html
+++ b/users.html
@@ -2,6 +2,7 @@
 layout: default
 title: کاربران
 jsFile: users.js
+access: users
 ---
 <section class="text-center">
   <div class="container my-5">
