--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
     <div class="container-fluid py-4">
       <div class="row px-4">
         <div class="h3 py-2 px-3 mt-auto border border-3 border-light mb-3">
-          پرونده ویژه: شهر و جمهوری اسلامی
+          پرونده ویژه: شهر جمهوری اسلامی
         </div>
       </div>
       <div class="card-deck">
