--- a/review.html
+++ b/review.html
@@ -17,10 +17,16 @@ access: users
   <div class="container mb-5">
     <div class="row">
       <div class="col-12">
-        <table id="myRecentPostTable" class="table">
+        <input class="form-control" id="searchPost" type="text" placeholder="جستجو..">        
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <table id="myRecentPostTable" class="table table-sm">
           <thead>
             <tr>
               <th scope="col">عنوان</th>
+              <th scope="col">نویسنده</th>
               <th scope="col">تاریخ ارسال</th>
               <th scope="col">آخرین ویرایش</th>
               <th scope="col">وضعیت</th>
