--- a/users.html
+++ b/users.html
@@ -18,6 +18,11 @@ access: users
   <div class="container">
     <div class="row">
       <div class="col-12">
+        <input class="form-control" id="searchUser" type="text" placeholder="جستجو..">                
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
         <table id="usersTable" class="table">
           <thead>
             <tr>
@@ -36,3 +41,22 @@ access: users
     </div>
   </div>
 </section>
+<div class="modal fade" id="delUserConfirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">آیا مطمئنید می‌‌خواهید کاربر زیر را حذف کنید؟</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <strong></strong>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">انصراف</button>
+        <button type="button" id="approve" class="btn btn-danger">حذف شود</button>
+      </div>
+    </div>
+  </div>
+</div>
