--- a/dashboard.html
+++ b/dashboard.html
@@ -124,6 +124,7 @@ import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
         <thead>
           <tr>
             <th scope="col">عنوان</th>
+            <th scope="col">نویسنده</th>
             <th scope="col">تاریخ ارسال</th>
             <th scope="col">آخرین ویرایش</th>
             <th scope="col">وضعیت</th>
@@ -163,3 +164,4 @@ import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
     </div>
   </div>
 </section>
+{% include modalDelPostConfirm.html %}
