--- a/review.html
+++ b/review.html
@@ -17,7 +17,7 @@ access: users
   <div class="container mb-5">
     <div class="row">
       <div class="col-12">
-        <input class="form-control" id="searchPost" type="text" placeholder="جستجو..">        
+        <input class="form-control" id="searchPost" type="text" placeholder="جستجو..">
       </div>
     </div>
     <div class="row">
@@ -42,3 +42,4 @@ access: users
     </div>
   </div>
 </section>
+{% include modalDelPostConfirm.html %}
