--- a/_posts/2020-08-25-zpyr.html
+++ b/_posts/2020-08-25-zpyr.html
@@ -17,6 +17,20 @@ gallery:
   title: "تصویر ۴. زاغ، ویرانۀ یک آرامگاه." 
 - image_path: "/assets/img/posts/zpyr-6.jfif" 
   title: "تصویر ۵ آ. ظهرشیر، منظر چهارتاق از شمال." 
+- image_path: "/assets/img/posts/zpyr-7.jfif" 
+  title: "تصویر ۵ ب. ظهرشیر، نقشه و برش چهارتاق." 
+- image_path: "/assets/img/posts/zpyr-8.jfif" 
+  title: "تصویر ۶. موک، نقشۀ چهارتاق." 
+- image_path: "/assets/img/posts/zpyr-9.jfif" 
+  title: "تصویر ۷. کراده، نقشه و برش چهارتاق." 
+- image_path: "/assets/img/posts/zpyr-10.jfif" 
+  title: "تصویر ۸. فراشبند، نقشۀ چهارتاق مالک." 
+- image_path: "/assets/img/posts/zpyr-11.jfif" 
+  title: "تصویر ۹. چهارتاق در شمال غربی شهر کازرون، بقایای یک دیوار در تاق چفت." 
+- image_path: "/assets/img/posts/zpyr-12.jfif" 
+  title: "تصویر ۱۰ آ. چهارتاق رهنی در نزدیکی فراشبند، گنبدخانه با سکنج‌ها." 
+- image_path: "/assets/img/posts/zpyr-13.jfif" 
+  title: "تصویر ۱۰ ب. چهارتاق رهنی، نقشه و برش." 
  
 --- 
 <p style="text-align: justify;">پیشگفتار: این نوشتار ترجمۀ یکی از مهم&zwnj;ترین مقالات دیتریش هوف است که پیش ازاین در مجله&nbsp;بهارستان ایران&nbsp;چاپ شده وحاوی نقشه&zwnj;های ارزشمندی نیز است. این نشریۀ وزین، به سردبیری دکتر سعید عریان و صاحب&zwnj;امتیازی کتابخانه مجلس شورای اسلامی، فقط در دو شماره در سال ۱۳۹۳منتشر شد و مانند نشریاتِ بسیار دیگری در این مملکت تداوم نیافت. از آن&zwnj;جا که امکان دسترسی به مقالات این مجله وجود ندارد، فکر کردم که خوب است از این طریق در دسترس پژوهشگران قرار گیرد./</p>
