--- a/_posts/2021-08-28-Rtnn.html
+++ b/_posts/2021-08-28-Rtnn.html
@@ -2,7 +2,7 @@
 title: "معماری کلاژگونه" 
 authors: h.noorbakhsh 
 types: blog 
-featured: false
+featured: true
 featureImg: "/assets/img/posts/Rtnn.jfif" 
 slug: Rtnn 
 gallery: 
