--- a/_posts/2021-09-21-8ZUU.html
+++ b/_posts/2021-09-21-8ZUU.html
@@ -2,9 +2,13 @@
 title: "برگزاری «‏شب‌های خراسانی: برای آشنایی ایرانیان با فرهنگ افغانستان»" 
 authors: asmaneh 
 types: news 
-tags: افغانستان,خراسان,خراسان بزرگ 
 featured: false
+featureImg: "/assets/img/posts/8ZUU.jpg" 
 slug: 8ZUU 
+gallery: 
+- image_path: "/assets/img/posts/8ZUU.jpg" 
+  title: "برگزاری «‏شب‌های خراسانی: برای آشنایی ایرانیان با فرهنگ افغانستان»" 
+ 
 --- 
 <p>زمان: چهارشنبه ۳۱ شهریور و پنجشنبه ۱ مهر ۱۴۰۰، ساعت ۱۷- ۲۲</p>
 <p>میزبان: موزۀ تصاویر معاصر و کافه تاریخ</p>
