--- a/_posts/2019-05-09-QTjC.html
+++ b/_posts/2019-05-09-QTjC.html
@@ -1,10 +1,4 @@
 --- 
-title: "معرفی کتاب عشق خارجی‌ها، اثر نایل گرین" 
-authors: moosavi 
-types: blog 
-slug: QTjC 
-gallery: 
-- image_path: "/assets/img/posts/QTjC-1.jpg" 
-  title: "Green, Nile. The Love of Strangers. Princeton: Princeton University Press, 2016." 
- 
+published: false 
 --- 
+  
