--- a/_posts/2021-01-10-GtcP.html
+++ b/_posts/2021-01-10-GtcP.html
@@ -8,6 +8,8 @@ slug: GtcP
 gallery: 
 - image_path: "/assets/img/posts/GtcP.jfif" 
   title: "عثمان حمدی و بازتعریف نقاشی‌های شرق‌شناسانه" 
+- image_path: "/assets/img/posts/GtcP-1.jfif" 
+  title: "تصویر ۱، عثمان حمدی Unknown author, Public domain, via Wikimedia Commons" 
 - image_path: "/assets/img/posts/GtcP-2.jfif" 
   title: "تصویر ۲، گفت‌وگو جلوی مسجد، ح. ۱۹۰۶ Berko gallery, CC BY-SA 4.0 , via Wikimedia Commons" 
 - image_path: "/assets/img/posts/GtcP-3.jfif" 
@@ -16,8 +18,6 @@ gallery:
   title: "تصویر ۴، عثمان حمدی، متأله، ۱۹۰۱، مجموعۀ خصوصی، استانبول" 
 - image_path: "/assets/img/posts/GtcP-5.jfif" 
   title: "تصویر ۵، عثمان حمدی، پس از افطار، ۱۸۸۶. گالری ایش بانک ترکیه" 
-- image_path: "undefined" 
-  title: "" 
  
 --- 
 <div>
