--- a/_posts/2020-05-04-YSDa.html
+++ b/_posts/2020-05-04-YSDa.html
@@ -2,7 +2,7 @@
 title: "ابتذال گل گلی معماری اینستاگرامی و بازتولید زیبایی‌شناسی بی‌اعتنایی" 
 authors: vahdat 
 types: blog 
-tags: معماری,نقد معماری,اینستاگرام,معماری اینستاگرامی,امریکا,ایالات متحده,سلفی,لوئیس باراگان,لوئی باراگان,لندن,موزه بستنی,فرشید موسوی,زاها حدید,فرهنگ پاپ,هنر پاپ,تکنولوژی,اینترنت,شانگهای 
+tags: معماری,نقد معماری,اینستاگرام,معماری اینستاگرامی,امریکا,ایالات متحده,سلفی,لوئیس باراگان,لوئی باراگان,لندن,موزه بستنی,فرشید موسوی,زاها حدید,فرهنگ پاپ,هنر پاپ,تکنولوژی,اینترنت,شانگهای,کلاژ,کلاژگونه,معماری پست‌مدرن,معماری پسامدرن,پست‌مدرنیسم 
 featured: false
 slug: YSDa 
 --- 
