--- a/_posts/2020-06-18-XDwB.html
+++ b/_posts/2020-06-18-XDwB.html
@@ -19,11 +19,11 @@ gallery:
 - image_path: "/assets/img/posts/XDwB-5.jfif" 
   title: "تصویر ۵: پلانِ ترسیمیِ پوگاچنکووا: Pugachenkova, Chefs-d’œuvre d’architecture de l’Asie centrale, XIVe-XVe siècle, p. 55" 
 - image_path: "/assets/img/posts/XDwB-6.jfif" 
-  title: "تصویر ۶: پلانِ ترسیمیِ مهوش عالمی: Alemi, Mahvash. "Chahar Bagh”, p 44" 
+  title: "تصویر ۶: پلانِ ترسیمیِ مهوش عالمی: Alemi, Mahvash. " 
 - image_path: "/assets/img/posts/XDwB-7.jfif" 
-  title: "تصویر ۷: پلانِ ترسیمیِ سابتلنی: Subtelny, "Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual”, p. 127" 
+  title: "تصویر ۷: پلانِ ترسیمیِ سابتلنی: Subtelny, " 
 - image_path: "/assets/img/posts/XDwB-8.jfif" 
-  title: "تصویر ۸: مقاطعِ ترسیمیِ سابتلنی: Subtelny, "Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual”, p. 127" 
+  title: "تصویر ۸: مقاطعِ ترسیمیِ سابتلنی: Subtelny, " 
 - image_path: "/assets/img/posts/XDwB-9.jfif" 
   title: "تصویر ۹: پلانِ ترسیمیِ دَمگو: Damgaard, “The Paradisical Garden; Tracing the Timurid Chahar Bagh”, p. 36" 
 - image_path: "/assets/img/posts/XDwB-10.jfif" 
