--- a/_posts/2020-06-18-XDwB.html
+++ b/_posts/2020-06-18-XDwB.html
@@ -2,6 +2,7 @@
 title: "غَرْقْ در «غرق»: محققان فرنگی و تبعات و ریشه‌های یک اشتباه" 
 authors: soltani 
 types: blog 
+tags: معماری اسلامی,تاریخ معماری,تاریخ معماری اسلامی,تاریخ باغ ایرانی,باغ ایرانی,باغ اسلامی,ارشادالزاعه,قاسم بن یوسف ابونصر هروی,ابونصر هروی,نسخه‌شناسی,عبدالغفار نجم‌الدوله,فلاحت,متون فلاحت,باغ,باغ‌سازی,پردیس,فردوس,نقد  
 featured: false
 featureImg: "/assets/img/posts/XDwB.jfif" 
 slug: XDwB 
