--- a/dashboard.html
+++ b/dashboard.html
@@ -97,7 +97,7 @@ import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
             <div class="card-body">
               <div class="media d-flex">
                 <div class="media-body text-left">
-                  <h4>نویسندگان</h4>
+                  <h4>مدیریت کاربران</h4>
                 </div>
                 <div class="align-self-center">
                   <i class="fas fa-users fa-3x float-right"></i>
@@ -108,7 +108,6 @@ import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </section>
