--- a/_posts/2018-10-23-nDF8.html
+++ b/_posts/2018-10-23-nDF8.html
@@ -1,7 +1,7 @@
 --- 
 title: "۸۵. بررسی ویژگی‌های آثار منسوب به معماران شیرازی در دورۀ تیموریان|مریم صادقیان" 
 authors: asmaneh 
-types:  
+types: research 
 featured: false
 slug: nDF8 
 --- 
