--- a/_posts/2017-02-18-Gsp7.html
+++ b/_posts/2017-02-18-Gsp7.html
@@ -5,14 +5,14 @@ types: research
 featured: false
 slug: Gsp7 
 --- 
-<div class="fullText col-lg-12 col-md-12 col-sm-6 col-xs-12 no-padding ng-scope" style="box-sizing: border-box; outline: none; position: relative; min-height: 1px; padding: 32.5125px 45.525px 32.5125px 65.0375px; float: left; width: 650.4px; height: auto; font-family: BBCNassim, Arial, tahoma; font-size: 20px; text-align: justify; color: #222222; overflow: hidden;">
+<div>
 <div>
 <div>
 <p>پرسش از چیستی یک اثر معماری پرسش از هدف بانیان بنا و شناخت کارکرد آن در سیاق تاریخی&zwnj;اش است. اولین قدم در شناخت کارکرد بنا و هدف بانیان از ساختْ آشنایی&zwnj;زدایی یا مواجهۀ بدون پیش&zwnj;فرض با بناست. در ناحیۀ تاریخی شهر یزد در محلۀ فهادان کنار بقعۀ دوازده امام بنایی هست که یزدیان آن را با نام زندان اسکندر می&zwnj;شناسند؛ اما اهل تحقیق بر سرِ چیستی آن با مردم اتفاق نظر ندارند. دانشوارن تاریخ معماری برای زندان اسکندر به منزلۀ اثر معماری اعتباری قائل نیستند و بنای مجاور بقعۀ دوازده امام را مدرسۀ ضیائیه می&zwnj;دانند. آنها معتقدند این بنا مدرسه&zwnj;ای است که در نیمۀ اول قرن هفتم هجری ساخته شده است.<br />در این تحقیق، مجتبی مهرعلی کردبچه، در پی فهم چیستی بنای گنبددار مجاور بقعۀ دوازده امام و سیر تحول و تاریخ&zwnj;گذاری آن است. بدین منظور می&zwnj;کوشد، با مقابلۀ شواهد متنی بر گرفته از متون تاریخی یزد و مشخصه&zwnj;های کالبدی و کتیبه&zwnj;های بنا به هدف تحقیق دست یابد. این تحقیق چهار فصل دارد. در فصل اول، &laquo;توصیف و تحلیل صوری&raquo;، بنا و نسبت آن با بناهای مجاور و موقعیت آن در شهر یزد را می&zwnj;شناسد. در فصل دوم ، &laquo;سیر تحول کالبدی&raquo;، با دقت در بنا سیر تحول کالبد بنا و تقدم و تأخر عناصر کالبدی را مشخص می&zwnj;کند. در فصل سوم، &laquo;تاریخ&zwnj;گذاری&raquo;، با مطالعۀ تطبیقی و سبک&zwnj;شناسی عناصر بنا و کتیبه&zwnj;ها آن را تاریخ&zwnj;گذاری می&zwnj;کند. در فصل چهارم، &laquo;چیستی&raquo;، با استناد به یافته&zwnj;های سه فصل نخست و استخراج و تفسیر داده&zwnj;های متنی در تواریخ یزد دربارۀ چیستی بنا بحث می&zwnj;کند. در آخر نیز با استناد به خود بنا و عناصر کالبدی آن که بر کارکردی خاص دلالت دارند و پرسش از خود بنا محتمل&zwnj;ترین حالت&zwnj;ها را برای کارکرد اصیل بنا پیشنهاد می&zwnj;دهد.</p>
-<p>مهرعلی کردبچه، مجتبی. &laquo;مدرسۀ ضیائیه یزد: سیر تحول کالبدی، تاریخ&zwnj;گذاری، چیستی&raquo;. پایان&zwnj;نامۀ کارشناسی&zwnj;ارشد مطالعات معماری ایران. استاد راهنما: دکتر هادی ندیمی. استاد مشاور: مهندس ذات&zwnj;الله نیک&zwnj;زاد. تهران: دانشگاه شهید بهشتی، بهمن ۱۳۹۵.</p>
+<p><strong>مهرعلی کردبچه، مجتبی. &laquo;مدرسۀ ضیائیه یزد: سیر تحول کالبدی، تاریخ&zwnj;گذاری، چیستی&raquo;. پایان&zwnj;نامۀ کارشناسی&zwnj;ارشد مطالعات معماری ایران. استاد راهنما: دکتر هادی ندیمی. استاد مشاور: مهندس ذات&zwnj;الله نیک&zwnj;زاد. تهران: دانشگاه شهید بهشتی، بهمن ۱۳۹۵.</strong></p>
 </div>
 </div>
 </div>
-<div class="timeContent ng-scope" style="box-sizing: border-box; outline: none; width: 650.4px; height: 100px; padding: 25px 85px 25px 0px; color: #333333; font-family: BBCNassim, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px;">
-<div class="dBox" style="box-sizing: border-box; outline: none; height: 50px; width: auto; float: right; margin-left: 20px;">&nbsp;</div>
+<div>
+<div>&nbsp;</div>
 </div>
