--- a/_posts/2018-05-07-R74U.html
+++ b/_posts/2018-05-07-R74U.html
@@ -1,30 +1,4 @@
 --- 
-title: "سر پادشاه خیوه بیرون دروازه دولت است" 
-authors: ghasemkhan 
-types: blog 
-featured: false
-slug: R74U 
+published: false 
 --- 
-<p>در میان پَرسه&zwnj;گردی&zwnj;هایم در عکس&zwnj;های دوره قاجار و بخصوص زمانه پادشاهی ناصرالدین شاه، مرتباً عکسی را می&zwnj;دیدم که هیچ توجه&zwnj;ام را جلب نمی&zwnj;کرد. بارها و بارها این عکس را دیده بودم ولی نمی&zwnj;دانم چرا به سادگی از آن می&zwnj;گذشتم.</p>
-<p>بارها و بارها اتفاق افتاد، بنائی آجری کوچکی بدون هیچ گونه تزئینات، تختِ تخت، &zwnj;بی&zwnj;هیچ سردری و نوشته&zwnj;ای.</p>
-<p>اما نوشته&zwnj;ای عجیب زیر عکس بود که توجه من را به سوی خود جلب کرد: &laquo;صورت مدفن سر پادشاه خیوه بیرون دروازه دولت است&raquo;، همین و بس.</p>
-<p>نه تاریخی و نه نشانه&zwnj;ای، تک درختانی در پشت بنا در محوطه&zwnj;ای دیگر بعد از دیوار کاهگلی که درختان و این محل مدفن را از هم جدا کند، دیده می&zwnj;شود.</p>
-<p>در دوره قاجار سر حکمرانان بسیاری بریده شد و به تهران آمد اما برای هیچ یک مدفنی یا گنبد و بارگاه اگرچه حتی ساده ساخته نشد و چرا این یکی، مگر خان خیوه کیست؟</p>
-<p>سر محمدحسن خان قاجار هم بریده شد به تهران آوردند، اما در محوطه بیرونی صحن حضرت عبدالعظیم به سادگی دفن شد و اکنون از آن هیچ اثری نیست، ولی این یکی چرا؟</p>
-<p>محمدحسن خان&nbsp;قاجار فرزند فتحعلی خان قاجار بود. در دو نبرد کریم خان زند را در هم کوفت و اصفهان را متصرف کرد. در نبردی در بهشهر مازندران شکست خورد و کشته شد. سرش به تهران آمد و هیچ شد.</p>
-<p>خان خیوه با شهرت ابوالغازی محمدامین خان از سلسله ایناق یکی از سلسله&zwnj;های خانات خیوه است. (خیوه در ازبکستان کنونی قرار دارد) خان خیوه به خان خیوق نیز معروف بوده است. تا دوره محمد امین خان، خوانین خیوه با دربار ایران مناسبات دوستانه&zwnj;ای داشتند و کمابیش تابع دولت ایران بودند. محمد امین خان شایستگی&zwnj;های بسیاری از خود نشان داد به این سبب پس از برادرش رحیم قلی&zwnj;خان در سال ۱۲۶۱ به حکومت منطقه منصوب شد.</p>
-<p>محمدشاه قاجار در سال ۱۲۶۲ میرزا رضای آقاسی را به سفارت خوارزم همراه با نامه&zwnj;ای برای تسلیت فوت خان سابق و تبریک حکومت جدید نزد محمد امین خان فرستاد. هم زمان با شورش محمدحسن خان سالار در خراسان خان خیوه نیز ادعای استقلال کرد. محمدامین خان با محمدحسن خان سالار روابط خوبی داشت و همیشه سه هزار سوار نظام ترکمن در خدمت او حاضر داشت. این سواران ترکمن در ازای خدمتشان حق داشتند که از مردم خراسان اسیر بگیرند. موضوع اسیرگرفتن از طوایف، در این معنا تنها یک اسیر نظامی نیست. این اسرا عموماً از شیعیان بودند و در ازای آزادی آنان پول دریافت می&zwnj;کردند، بدون آنکه به آنان تعدی شود و یا مورد ظلم و تجاوز قرار گیرند، این شرایط را آلامان می&zwnj;گفتند.</p>
-<p>رفتار خان خیوه رفتاری سرکشانه در سیستم قاجاری بود. وی علی رغم پیمان&zwnj;هایی که می&zwnj;بست، باز به تجاوز و اسیر کردن مردم مرو، سرخس و خراسان ادامه می&zwnj;داد.</p>
-<p>این سرکشی&zwnj;های محمدامین خان، خان خیوه تا سال ۱۲۷۱ ادامه داشت.</p>
-<p>در این سال خان خیوه برای گرفتن زکات سفیری به سرخس فرستاد. مردم سرخس از دادن زکات خودداری کردند و سفیر را کشتند. خان خیوه از قبایل ترکمن و طوایف هم پیمان خود کمک خواست و به سرخس لشکر کشید. اهالی شهر از فریدون میرزا فرمان&zwnj;فرما، حاکم خراسان (پسر پنجم عباس میرزا) و جانشین حسام السلطنه درخواست کمک کردند.</p>
-<p>فریدون میرزا فرمان&zwnj;فرما، جمعاً اول بار نهصد سوار به مقابله با وی فرستاد، محمدامین خان، در حمله به سرخس تعجیل کرد. سپاه او را چهل هزار نفر دانسته&zwnj;اند. { این&zwnj;گونه اغراق&zwnj;ها در متون قاجاری بسیار دیده می&zwnj;شود، اینکه لشکر نهصد نفری به مقابله با چهل هزار نیرو بروند، خود از داستان&zwnj;های !! تاریخ است. اگر این محمدامین، خان خیوه چهل هزار سرباز می&zwnj;داشت مطمئناً تا قلب پادشاهی قاجار تاخته بود.}</p>
-<p>فریدون میرزا فرمان&zwnj;فرما نیز جمعی از سرداران خراسانی را با دو هزار نفر سوار به سرخس اعزام نمود. در روز دوشنبه ۳۰ جمادی&zwnj;الاخر ۱۲۷۱ جنگ میان دو لشکر به وقوع پیوست.</p>
-<p>(پیش قراولان به کمک سوارهای محلی رسیدند و ترکمن&zwnj;ها با وجود اینکه بالغ بر چهل هزار نفر بودند (!!!) از ...... ایران شکست خوردند، خان خیوه را که در بالای قانلوئیه در چادر زرنگاری با چند نفر از توره&zwnj;ها (شاهزادگان) و محارم خود نشسته و ناظر عملیات بود تنها گذاشتند فرار را بر قرار ترجیح دادند. خان که اوضاع را چنین دید، خواست فرار کند لیکن یکی از سرکردگان ایرانی به نام قربان گل مروی غفلتاً او و توره&zwnj;ها را گرفته به اتفاق صحت نیازخان پسر اراض خان سرخسی&zwnj;ها را سر بریدند.) (خاطرات اسارت / ۱۳۷۰)</p>
-<p>خان خیوه وی چهارده تن از عموزادگان وی و همچنین ۳۲ نفر از درباربان خیوه در این جنگ کشته شدند.</p>
-<p>سرهای کشته شدگان را به تهران آوردند و به دستور ناصرالدین شاه غسل دادند و با احترام در محلی خارج دروزاه دولت تهران دفن کردند. محمدامین خان، خان خیوه هنگام مرگ ۳۵ سال داشت. این از داستان خان خیوه و سر بریده&zwnj;اش.</p>
-<p>بنای ساخته شده در بیرون دروزاه دولت تهران بنایی آخری به نظر می&zwnj;رسد که این در زمان توسعه اول شهر تهران در حدود سال&zwnj;های ۱۲۵۰ و یا در دوره ناصرالدین شاه تخریب و دیوارها و ...... تهران برای گسترش شهر تغییر کرده باشد.</p>
-<p>از این بنا در هیچ یک از منابع مشروطیت و پس از آن یاد نشده است.</p>
-<p>براساس بررسی&zwnj;های انجام شده عکس&zwnj;های گرفته شده از این بنا، از آثار لوئیچی پشه عکاسی ایتالیایی در دوره قاجار در تهران است.</p>
-<p>&nbsp;<br />منابع:</p>
-<p>- دانشنامه جهان اسلام</p>
-<p>- تاریخ بخارا، خوقند و کاشغر / میرزا شمس بخارائی / دفتر نشر میراث مکتوب تهران</p>
+  
