--- a/_posts/2019-03-02-GvTE.html
+++ b/_posts/2019-03-02-GvTE.html
@@ -1,5 +1,5 @@
 --- 
-title: "تأثیر ادبیات حماسی فارسی بر نگارگری ایرانی»| حسین عصمتی" 
+title: "تأثیر ادبیات حماسی فارسی بر نگارگری ایرانی| حسین عصمتی" 
 authors: asmaneh 
 types: library 
 featured: false
