--- a/_posts/2019-02-24-ushr.html
+++ b/_posts/2019-02-24-ushr.html
@@ -1,10 +1,8 @@
 --- 
-title: "نورعلی برومند، گنجینهٔ موسیقی ایرانی، به روایت اسناد| علیرضا اسماعیلی" 
+title: "۱۸۸. «نورعلی برومند، گنجینهٔ موسیقی ایرانی، به روایت اسناد».علیرضا اسماعیلی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۹۷- ۱۰۶." 
 authors: asmaneh 
 types: library 
 featured: false
 attachedPDF: "/assets/pdf/ushr.pdf" 
 slug: ushr 
 --- 
-<p>نورعلی برومند ( ۱۲۸۵-۱۳۵۵) از حاملان اصلی رديف موسيقی ايرانى از دوران گذشته به روزگار ماست. او تار را نزد دروی شخان، سنتور را نزد حبيب سماعی، رديف ميرزا عبدالله را نزد اسماعيل قهرمانى، و آواز را نزد سيدحسين طاهرزاده آموخت و از تجارب استادان صمصام&zwnj;الدوله، رضا روانبخش، عبدالله دوامی، و حاج آقا محمد ايرانى مجرد بهره برد. او موسيقی اروپايى را نيز در آلمان آموخت. برومند سال&zwnj;ها مدرس موسيقی دانشکدۀ هنرهای زيبا و از مؤسسان مرکز حفظ و اشاعۀ موسيقی ملي بود. او از چهره&zwnj;های شاخص تاريخ موسيقی ايرانى است و در حفظ و انتقال سنت موسيقی ايرانى به روزگار ما نقش مهمی داشته است. در اين مقاله، اسنادی دربارۀ برومند و زندگی او منتشر و بررسی می&zwnj;شود.</p>
-<p>علیرضا اسماعیلی. &laquo;نورعلی برومند، گنجینهٔ موسیقی ایرانی، به روایت اسناد&raquo;. در <em>گلستان هنر</em>، ش ۱۵ (بهار ۱۳۸۸)، ص۹۷- ۱۰۶.</p>
