--- a/_posts/2018-11-09-qhcp.html
+++ b/_posts/2018-11-09-qhcp.html
@@ -1,7 +1,7 @@
 --- 
 title: "۱۷۶. «تأملی در هنر قاجاری و اهمیت آن». آلگ گرابار. ترجمهٔ ولی‌الله کاووسی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۸۳- ۹۴." 
 authors: asmaneh 
-types:  
+types: library 
 featured: false
 attachedPDF: "/assets/pdf/qhcp.pdf" 
 slug: qhcp 
