--- a/_posts/2021-09-13-rABe.html
+++ b/_posts/2021-09-13-rABe.html
@@ -5,8 +5,14 @@ types: bap
 categories: asmaneBooks 
 tags: ایران‌شناسی,فلسفهٔ اسلامی,هویت ملی,علی مظفری,مفهوم وطن 
 featured: false
+featureImg: "/assets/img/posts/rABe.jpg" 
 slug: rABe 
+gallery: 
+- image_path: "/assets/img/posts/rABe.jpg" 
+  title: "شکل‌دهی به هویت ملی در ایران: انگاره وطن برگرفته از تخیل مکان در اندیشه‌های اسلام و ایران باستان| علی مظفری " 
+ 
 --- 
 <p>جایگزین شدنِ نظم سیاسی جهانیِ متّکی بر امپراطوری&zwnj;ها توسط نظمی متّکی بر دولت&zwnj;ملت&zwnj;ها طی روندی چهارصدساله به&zwnj;وقوع پیوست. آغازِ آن، با سرزدنِ جنبش&zwnj;های اصلاحگری دینی در قرن شانزدهم میلادی همراه بود و پایانش، مستلزم دو جنگ جهانی. ایران، همچون یک موجودیت سرزمینیِ دیرپا و یک فرهنگِ کهن با یک سابقهٔ طولانی در همزیستیِ اقوام مختلف، هم در آغاز این بحران، سعی و تلاشی توأم با موفقیت به معنای تأسیس دولتی ایرانی انجام داد و هم در پایانِ راه در تثبیت و تحکیمِ آن دولت. اکنون بدان صورت که در این کتاب توضیح داده شده است، این تلاش و تکاپو&zwnj;ها در دو دورهٔ نامبرده به تبیین دو انگاره&zwnj; از &laquo;وطن&raquo; انجامیدند که اغلب در هر دو سطح عام و رسمی یکدیگر را تقویت کرده&zwnj;اند. با اینهمه همانطور که در این کتاب از طریق ساخت و سپس بازسازیِ موزهٔ ملّی ایران توضیح داده می&zwnj;شود، در تاریخ معاصر ایران دوبار تلاشِ بی&zwnj;حاصلی انجام شد برای رسیدن به درکی یکپارچه از وطن که فقط بر پایهٔ یکی از این دو انگاره&zwnj; استوار باشد. نتیجه آنکه وطن همچون مفهومی ناپایدار و مبهم باقی ماند.</p>
-<p>اطلاعات بیشتر دربارۀ کتاب:</p>
-<p dir="ltr" style="text-align: left;"><a href="https://shirazehketab.com/product/detail/405/%D8%B4%DA%A9%D9%84-%D8%AF%D9%87%DB%8C-%D8%A8%D9%87-%D9%87%D9%88%DB%8C%D8%AA-%D9%85%D9%84%DB%8C-%D8%AF%D8%B1-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86">https://shirazehketab.com/product/detail/405/%D8%B4%DA%A9%D9%84-%D8%AF%D9%87%DB%8C-%D8%A8%D9%87-%D9%87%D9%88%DB%8C%D8%AA-%D9%85%D9%84%DB%8C-%D8%AF%D8%B1-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86</a></p>
+<p><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>اطلاعات بیشتر دربارۀ کتاب:</p>
+<p dir="ltr" style="text-align: left;"><a href="https://shirazehketab.com/product/detail/405/%D8%B4%DA%A9%D9%84-%D8%AF%D9%87%DB%8C-%D8%A8%D9%87-%D9%87%D9%88%DB%8C%D8%AA-%D9%85%D9%84%DB%8C-%D8%AF%D8%B1-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86">https://shirazehketab.com</a></p>
+<p dir="ltr" style="text-align: left;">&nbsp;</p>
