--- a/_posts/2021-09-08-qPCD.html
+++ b/_posts/2021-09-08-qPCD.html
@@ -5,12 +5,19 @@ types: bap
 categories: asmaneBooks 
 tags: رابرت وود,پالمیرا,بعلبک,جان بووری,جمیز داوکینز,جیووانی باتیستا بورا,معماری کلاسیک 
 featured: false
+featureImg: "/assets/img/posts/qPCD.jpg" 
 slug: qPCD 
+gallery: 
+- image_path: "/assets/img/posts/qPCD.jpg" 
+  title: "ویرانه‌های پالمیرا و بعلبک| رابرت وود" 
+ 
 --- 
-<p><em>ویرانه&zwnj;های پالمیرا و&nbsp; بعلبک</em> که اولین بار در دههٔ ۱۷۵۰ منتشر شد گزارشی باارزش از سفر سه عتیقه&zwnj;شناس، رابرت وود، جان بووری&nbsp; و جمیز داوکینز، و یک طراح، جیووانی باتیستا بورا، به مشرق&zwnj; است. این مجلدات با بیش از ۱۰۰ طرح از معماری کلاسیک دو شهر باستانی پالمیرا و بعلبک، اولین نمونه&zwnj;های شناخته شده از تک&zwnj;نگاری&zwnj;ها را در سایت&zwnj;های باستان&zwnj;شناسی عرضه می&zwnj;کند. آنها در فراهم آوردن گفتگو&zwnj;های نظام&zwnj;مند در بارهٔ جغرافیای فیزیکی و انسانی سایت&zwnj;ها همراه با دو گونه شاهد تصویری منحصر به فرد بودند: نماهای سایت&zwnj;های باستانی در وضعیت کنونی و پلان&zwnj;های پرجزئیات آنها، با اندازه&zwnj;گذاری، از مشخصه&zwnj;های معماری. عتیقه&zwnj;شناسان به سرعت این رویکرد جدید را در اواخر سده&zwnj;ٔ هجدهم تکرار کردند و بر معماری نئوکلاسیک در بریتانیا و اروپا و شمال آمریکا اثرگذار بودند.</p>
+<p>ویرانه&zwnj;های پالمیرا و ویرانه&zwnj;های بعلبک که اولین بار در دههٔ ۱۷۵۰ منتشر شد گزارشی باارزش از سفر سه عتیقه&zwnj;شناس، رابرت وود، جان بووری&nbsp; و جمیز داوکینز، و یک طراح، جیووانی باتیستا بورا، به مشرق&zwnj; است. این مجلدات با بیش از ۱۰۰ طرح از معماری کلاسیک دو شهر باستانی پالمیرا و بعلبک، اولین نمونه&zwnj;های شناخته شده از تک&zwnj;نگاری&zwnj;ها را در سایت&zwnj;های باستان&zwnj;شناسی عرضه می&zwnj;کند. آنها در فراهم آوردن گفتگو&zwnj;های نظام&zwnj;مند در بارهٔ جغرافیای فیزیکی و انسانی سایت&zwnj;ها همراه با دو گونه شاهد تصویری منحصر به فرد بودند: نماهای سایت&zwnj;های باستانی در وضعیت کنونی و پلان&zwnj;های پرجزئیات آنها، با اندازه&zwnj;گذاری، از مشخصه&zwnj;های معماری. عتیقه&zwnj;شناسان به سرعت این رویکرد جدید را در اواخر سده&zwnj;ٔ هجدهم تکرار کردند و بر معماری نئوکلاسیک در بریتانیا و اروپا و شمال آمریکا اثرگذار بودند.</p>
 <p>بازتولید تمام طرح&zwnj;ها و شرحی تازه بر آنها از دانشوری برجسته، بنجامین اندرسون، از ویژگی&zwnj;های ویراست جدید این کتاب است.</p>
-<p>&nbsp;</p>
-<p><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>فهرست مطالب کتاب:</p>
+<p dir="ltr" style="text-align: left;">The Ruins of Palmyra and Baalbek</p>
+<p dir="ltr" style="text-align: left;">by Robert Wood</p>
+<p dir="ltr" style="text-align: left;">Bloomsbury, 2021</p>
+<p style="text-align: right;"><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>فهرست مطالب کتاب:</p>
 <p dir="ltr" style="text-align: left;">Volume I: The Ruins of Palmyra</p>
 <p dir="ltr" style="text-align: left;">Introduction by Benjamin Anderson</p>
 <p dir="ltr" style="text-align: left;">The Publisher to the Reader</p>
@@ -24,5 +31,5 @@ slug: qPCD
 <p dir="ltr" style="text-align: left;">Ancient State of Baalbek</p>
 <p dir="ltr" style="text-align: left;">Explanation of the Plates</p>
 <p dir="ltr" style="text-align: left;">Plates 1-46</p>
-<p><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>اطلاعات بیشتر دربارۀ کتاب:</p>
+<p style="text-align: right;"><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>اطلاعات بیشتر دربارۀ کتاب:</p>
 <p dir="ltr" style="text-align: left;"><a href="https://www.bloomsbury.com/uk/ruins-of-palmyra-and-baalbek-9780755617265">https://www.bloomsbury.com/uk/ruins-of-palmyra-and-baalbek-9780755617265</a></p>
