--- a/_posts/2021-06-26-Sp5C.html
+++ b/_posts/2021-06-26-Sp5C.html
@@ -5,6 +5,7 @@ types: bap
 categories: articles 
 tags: فیروزآباد فارس,خط کوفی,جایدشت,عمادالدین شیخ‌الحکمایی,کتیبه‌,امامزاده شاه فضل‌الله 
 featured: false
+attachedPDF: "/assets/pdf/Sp5C.pdf" 
 slug: Sp5C 
 --- 
 <p>کتیبه&zwnj;هایی که در این مقاله می&zwnj;آید، در سال ۱۳۸۳ در محوطه&zwnj;ای در جنوب روستای روزبدان در منطقۀ جایدشت شهر فیروزآباد استان فارس، در حین خاکبرداری با لودر به دست آمده است.&nbsp;</p>
