--- a/_posts/2019-06-18-8gSd.html
+++ b/_posts/2019-06-18-8gSd.html
@@ -2,6 +2,7 @@
 title: "مطالعۀ موضوعی ایکوموس و بخش شرقی راه‌های ابریشم: راهبردی برای ثبت جهانی| بخش نخست" 
 authors: masoomi 
 types: blog 
+tags: ایکوموس,راه ابریشم,یونسکو,میراث جهانی یونسکو,آسیای شرقی,شرق آسیا,چین,آسیای میانه,آسیای مرکزی,افغانستان,هیمالیا,نپال,پاکستان,هند,قلعه,برج دیدبانی,پل,شهر,کلان‌شهر,ارسن,کاروانسرا,ایران,کاروانسراهای ایران,منظر فرهنگی,باستان‌شناسی,حفاظت از میراث ,معماری,جی‌آی‌اس 
 featured: false
 featureImg: "/assets/img/posts/8gSd.jfif" 
 slug: 8gSd 
