--- a/_posts/2019-12-27-7SmZ.html
+++ b/_posts/2019-12-27-7SmZ.html
@@ -2,6 +2,7 @@
 title: "مطالعۀ موضوعی ایکوموس و بخش شرقی راه‌های ابریشم: راهبردی برای ثبت جهانی| بخش دوم" 
 authors: masoomi 
 types: blog 
+tags: ایکوموس,راه ابریشم,ثبت جهانی,یونسکو,ثبت جهانی یونسکو,چین,آسیای میانه,آسیای مرکزی,افعانستان,ایران,قلعه,کاروانسرا,تجارت,شهر,جی‌آی‌اس,هند,بنگلادش,بودیسم,بودا,معبد بودایی,معماری بودایی,رویکرد ثبت,حفاظت,حفاظت از آثار تاریخی,حفاظت از میراث فرهنگی,حفاظت از میراث جهانی 
 featured: false
 featureImg: "/assets/img/posts/7SmZ.jfif" 
 slug: 7SmZ 
