--- a/_posts/2021-09-13-rABe.html
+++ b/_posts/2021-09-13-rABe.html
@@ -2,7 +2,7 @@
 title: "شکل‌دهی به هویت ملی در ایران: انگاره وطن برگرفته از تخیل مکان در اندیشه‌های اسلام و ایران باستان| علی مظفری " 
 authors: asmaneh 
 types: bap 
-categories: asmaneBooks 
+categories: book 
 tags: ایران‌شناسی,فلسفهٔ اسلامی,هویت ملی,علی مظفری,مفهوم وطن 
 featured: false
 featureImg: "/assets/img/posts/rABe.jpg" 
