--- a/_posts/2021-09-08-qPCD.html
+++ b/_posts/2021-09-08-qPCD.html
@@ -2,7 +2,7 @@
 title: "ویرانه‌های پالمیرا و بعلبک| رابرت وود" 
 authors: asmaneh 
 types: bap 
-categories: asmaneBooks 
+categories: book 
 tags: رابرت وود,پالمیرا,بعلبک,جان بووری,جمیز داوکینز,جیووانی باتیستا بورا,معماری کلاسیک 
 featured: false
 featureImg: "/assets/img/posts/qPCD.jpg" 
